Fixes layout problem

--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -62,7 +62,7 @@
 		margin-left: -400px;
 	}
 	.content {
-		margin-top: -180px;
+		margin-top: -240px;
 		border: 0px;
 	}
 	.mobilebar {
